[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainlayer-crewai"
version = "0.1.0"
description = "CrewAI tools for Mainlayer — payment infrastructure for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mainlayer", email = "hello@mainlayer.fr" }]
keywords = ["crewai", "ai", "agents", "payments", "mainlayer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "crewai>=0.55.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = ["crewai[openai]>=0.55.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.urls]
Homepage = "https://mainlayer.fr"
Repository = "https://github.com/mainlayer/mainlayer-crewai"
Documentation = "https://docs.mainlayer.fr"

[tool.hatch.build.targets.wheel]
packages = ["src/mainlayer_crewai"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
